--- a/h5.html
+++ b/h5.html
@@ -20,7 +20,7 @@
             color: #333;
         }
     </style>
-    <link type="text/css" rel="stylesheet" href="css/animate.min.css" />
+    <link type="text/css" rel="stylesheet" href="animate.min.css" />
 
 </head>
 <body>
